# open-meshtastic-monitor

./: .gitignore  README.md  mqtt_start.py  package-lock.json  package.json
gui/: rxParse.txt
gui/meshInterface/: CMakeLists.txt  CMakeLists.txt.bak  MainApp.ui  MainApp.ui.bak  debug_config.cpp  debug_config.h  loginWindow.cpp  loginWindow.h  loginWindow.ui  main.cpp  mainapp.cpp  mainapp.h  map.html  meshtastic_handler.cpp  meshtastic_handler.h  resources.qrc  userdatabase.cpp  userdatabase.h
gui/meshInterface/bulid/: CMakeCache.txt  cmake_install.cmake  map.html  meshInterface
gui/meshInterface/bulid/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
gui/meshInterface/bulid/meshInterface_autogen/: deps  mocs_compilation.cpp
gui/meshInterface/bulid/meshInterface_autogen/EWIEGA46WW/: moc_loginWindow.cpp.d  moc_mainapp.cpp.d
gui/meshInterface/meshtastic/: admin.pb.cc  admin.pb.h  apponly.pb.cc  apponly.pb.h  atak.pb.cc  atak.pb.h  cannedmessages.pb.cc  cannedmessages.pb.h  channel.pb.cc  channel.pb.h  clientonly.pb.cc  clientonly.pb.h  config.pb.cc  config.pb.h  connection_status.pb.cc  connection_status.pb.h  device_ui.pb.cc  device_ui.pb.h  deviceonly.pb.cc  deviceonly.pb.h  interdevice.pb.cc  interdevice.pb.h  localonly.pb.cc  localonly.pb.h  mesh.pb.cc  mesh.pb.h  module_config.pb.cc  module_config.pb.h  mqtt.pb.cc  mqtt.pb.h  nanopb.pb.cc  nanopb.pb.h  paxcount.pb.cc  paxcount.pb.h  portnums.pb.cc  portnums.pb.h  powermon.pb.cc  powermon.pb.h  remote_hardware.pb.cc  remote_hardware.pb.h  (+8 more)
mqtt/: mqtt_start.py  packet_info.txt  start_mqtt.sh
prisma/: dev.db  schema.prisma
src/app/: layout.tsx  page.tsx
src/app/api/auth/: route.ts
src/app/dashboard/: page.tsx
src/scripts/: manage-users.js
src/utils/: route.ts
